--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-    --theme-color: #ccc;
+    --theme-color: green;
     --theme-font: "Times New Roman";
 }
 
@@ -67,5 +67,5 @@ h2 {
 
 h2 + ul {
     padding-left: 2rem;
-    list-style: decimal;
+    list-style: disc;
 }
